fix spacing for buttons in settings container

--- a/src/pages/Settings.css
+++ b/src/pages/Settings.css
@@ -1,3 +1,3 @@
 .Settings .button {
-  margin: 0 .25em 1rem 0;
+  margin: .5rem .5em .5rem 0;
 }
